--- a/kubeovn-helm/templates/central-deploy.yaml
+++ b/kubeovn-helm/templates/central-deploy.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: ovn-central
-  namespace: kube-system
+  namespace: {{ .Values.namespace }}
   annotations:
     kubernetes.io/description: |
       OVN components: northd, nb and sb.
@@ -73,11 +73,11 @@ spec:
               value: "{{- .Values.func.ENABLE_BIND_LOCAL_IP }}"
           resources:
             requests:
-              cpu: 300m
-              memory: 200Mi
+              cpu: {{ index .Values "ovn-central" "requests" "cpu" }}
+              memory: {{ index .Values "ovn-central" "requests" "memory" }}
             limits:
-              cpu: 3
-              memory: 4Gi
+              cpu: {{ index .Values "ovn-central" "limits" "cpu" }}
+              memory: {{ index .Values "ovn-central" "limits" "memory" }}
           volumeMounts:
             - mountPath: /var/run/openvswitch
               name: host-run-ovs
