--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -17,7 +17,7 @@ jobs:
   code-review:
     runs-on: ubuntu-latest
     steps:
-      - uses: oilbeater/ChatGPT-CodeReview@main
+      - uses: oilbeater/ChatGPT-CodeReview@debug
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
