--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ ovn.yaml
 ovn-ic-0.yaml
 ovn-ic-1.yaml
 kind.yaml
+broker-info.subm
+broker-info.subm.*
+broker-info-internal.subm
 kube-ovn.tar
 vpc-nat-gateway.tar
 image-amd64.tar
