--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -23,7 +23,7 @@ concurrency:
 env:
   GOSEC_VERSION: '2.15.0'
   HELM_VERSION: v3.11.1
-  SUBMARINER_VERSION: v0.13.4
+  SUBMARINER_VERSION: '0.14.3'
 
 jobs:
   build-kube-ovn-base:
@@ -1593,7 +1593,7 @@ jobs:
 
       - name: Install submariner subctl
         env:
-          VERSION: ${{ env.SUBMARINER_VERSION }}
+          VERSION: v${{ env.SUBMARINER_VERSION }}
           DESTDIR: /usr/local/bin
         run: curl -Ls https://get.submariner.io | bash
 
