fix update fip rules not effect correctly

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -334,6 +334,8 @@ spec:
                   type: string
                 redo:
                   type: string
+                internalIp:
+                  type: string
                 conditions:
                   type: array
                   items:
