--- a/yamls/kube-ovn.yaml
+++ b/yamls/kube-ovn.yaml
@@ -190,6 +190,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIPs
+            - name: DBUS_SYSTEM_BUS_ADDRESS
+              value: "unix:path=/host/var/run/dbus/system_bus_socket"
           volumeMounts:
             - name: host-modules
               mountPath: /lib/modules
@@ -202,6 +204,9 @@ spec:
               name: host-run-ovs
             - mountPath: /run/ovn
               name: host-run-ovn
+            - mountPath: /host/var/run/dbus
+              name: host-dbus
+              mountPropagation: HostToContainer
             - mountPath: /var/run/netns
               name: host-ns
               mountPropagation: HostToContainer
@@ -259,6 +264,9 @@ spec:
         - name: host-ns
           hostPath:
             path: /var/run/netns
+        - name: host-dbus
+          hostPath:
+            path: /var/run/dbus
         - name: host-log-ovs
           hostPath:
             path: /var/log/openvswitch
