feat: add support for EIP QoS
1. Create a QoSPolicy CRD and manage its lifecycle.
2. Add a new "spec.qosPolicy" field to iptablesEIP to relate to
the QoSPolicy.
3. Configure NATGW EIP QoS when "spec.qosPolicy" changes.
4. Implement NATGW EIP QoS functionality using Linux TC.

--- a/kubeovn-helm/templates/ovn-CR.yaml
+++ b/kubeovn-helm/templates/ovn-CR.yaml
@@ -40,6 +40,8 @@ rules:
       - vpc-dnses/status
       - switch-lb-rules
       - switch-lb-rules/status
+      - qos-policies
+      - qos-policies/status
     verbs:
       - "*"
   - apiGroups:
