--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -249,6 +249,8 @@ spec:
                   type: string
                 redo:
                   type: string
+                qosPolicy:
+                  type: string
                 conditions:
                   type: array
                   items:
@@ -276,6 +278,8 @@ spec:
                 macAddress:
                   type: string
                 natGwDp:
+                  type: string
+                qosPolicy:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1572,3 +1576,72 @@ spec:
         status: {}
   conversion:
     strategy: None
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: qos-policies.kubeovn.io
+spec:
+  group: kubeovn.io
+  names:
+    plural: qos-policies
+    singular: qos-policy
+    shortNames:
+      - qos
+    kind: QoSPolicy
+    listKind: QoSPolicyList
+  scope: Cluster
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      subresources:
+        status: {}
+      additionalPrinterColumns:
+      - jsonPath: .spec.bandwidthLimitRule.ingressMax
+        name: IngressMax
+        type: string
+      - jsonPath: .spec.bandwidthLimitRule.egressMax
+        name: EgressMax
+        type: string
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            status:
+              type: object
+              properties:
+                bandwidthLimitRule:
+                  type: object
+                  properties:
+                    ingressMax:
+                      type: string
+                    egressMax:
+                      type: string
+                conditions:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                      status:
+                        type: string
+                      reason:
+                        type: string
+                      message:
+                        type: string
+                      lastUpdateTime:
+                        type: string
+                      lastTransitionTime:
+                        type: string
+            spec:
+              type: object
+              properties:
+                bandwidthLimitRule:
+                  type: object
+                  properties:
+                    ingressMax:
+                      type: string
+                    egressMax:
+                      type: string
