--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -40,6 +40,8 @@ rules:
       - switch-lb-rules/status
       - vpc-dnses
       - vpc-dnses/status
+      - qos-policies
+      - qos-policies/status
     verbs:
       - "*"
   - apiGroups:
