--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -521,6 +521,8 @@ spec:
                   type: string
                 redo:
                   type: string
+                internalCIDR:
+                  type: string
                 conditions:
                   type: array
                   items:
