--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -799,8 +799,11 @@ spec:
       subresources:
         status: {}
       additionalPrinterColumns:
-        - jsonPath: .status.vpc
-          name: Vpc
+        - jsonPath: .spec.ovnEip
+          name: Eip
+          type: string
+        - jsonPath: .status.protocol
+          name: Protocol
           type: string
         - jsonPath: .status.v4Eip
           name: V4Eip
@@ -808,15 +811,18 @@ spec:
         - jsonPath: .status.v4Ip
           name: V4Ip
           type: string
-        - jsonPath: .status.ready
-          name: Ready
-          type: boolean
-        - jsonPath: .spec.ipType
-          name: IpType
+        - jsonPath: .status.internalPort
+          name: InternalPort
+          type: string
+        - jsonPath: .status.externalPort
+          name: ExternalPort
           type: string
         - jsonPath: .spec.ipName
           name: IpName
           type: string
+        - jsonPath: .status.ready
+          name: Ready
+          type: boolean
       schema:
           openAPIV3Schema:
             type: object
@@ -833,6 +839,14 @@ spec:
                   macAddress:
                     type: string
                   vpc:
+                    type: string
+                  externalPort:
+                    type: string
+                  internalPort:
+                    type: string
+                  protocol:
+                    type: string
+                  ipName:
                     type: string
                   conditions:
                     type: array
@@ -859,6 +873,12 @@ spec:
                   ipType:
                     type: string
                   ipName:
+                    type: string
+                  externalPort:
+                    type: string
+                  internalPort:
+                    type: string
+                  protocol:
                     type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
