move the vpc-nat generic configurations into one single ConfigMap

--- a/kubeovn-helm/values.yaml
+++ b/kubeovn-helm/values.yaml
@@ -9,6 +9,7 @@ global:
     kubeovn:
       repository: kube-ovn
       dpdkRepository: kube-ovn-dpdk
+      vpcRepository: vpc-nat-gateway
       tag: v1.12.0
       support_arm: true
       thirdparty: true
