--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -329,8 +329,8 @@ jobs:
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: kubectl-ko-log.tar kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log
-          path: kubectl-ko-log.tar kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log.tar
+          name: kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log
+          path: kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log.tar
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
