--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -366,14 +366,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log
-          path: k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log.tar
+          path: k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log.tar.gz
 
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
@@ -473,14 +475,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log
-          path: k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar
+          path: k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
   k8s-netpol-legacy-e2e:
     name: Kubernetes Network Policy Legacy E2E
@@ -580,14 +584,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar k8s-netpol-legacy-e2e-${{ matrix.ip-family }}-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz k8s-netpol-legacy-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: k8s-netpol-legacy-e2e-${{ matrix.ip-family }}-ko-log
-          path: k8s-netpol-legacy-e2e-${{ matrix.ip-family }}-ko-log.tar
+          path: k8s-netpol-legacy-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
   cyclonus-netpol-e2e:
     name: Cyclonus Network Policy E2E
@@ -663,14 +669,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log
-          path: cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar
+          path: cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
   kube-ovn-conformance-e2e:
     name: Kube-OVN Conformance E2E
@@ -764,14 +772,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log
-          path: kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log.tar
+          path: kube-ovn-conformance-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
@@ -858,14 +868,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar kube-ovn-ic-conformance-e2e-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz kube-ovn-ic-conformance-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: kube-ovn-ic-conformance-e2e-ko-log
-          path: kube-ovn-ic-conformance-e2e-ko-log.tar
+          path: kube-ovn-ic-conformance-e2e-ko-log.tar.gz
 
   chart-installation-test:
     name: Chart Installation Test
@@ -1267,14 +1279,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar webhook-e2e-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz webhook-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: webhook-e2e-ko-log
-          path: webhook-e2e-ko-log.tar
+          path: webhook-e2e-ko-log.tar.gz
 
   installation-compatibility-test:
     name: Installation Compatibility Test
@@ -1310,14 +1324,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar installation-compatibility-test-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz installation-compatibility-test-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: installation-compatibility-test-ko-log
-          path: installation-compatibility-test-ko-log.tar
+          path: installation-compatibility-test-ko-log.tar.gz
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
@@ -1414,14 +1430,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar cilium-chaining-e2e-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz cilium-chaining-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: cilium-chaining-e2e-ko-log
-          path: cilium-chaining-e2e-ko-log.tar
+          path: cilium-chaining-e2e-ko-log.tar.gz
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
@@ -1526,14 +1544,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar kube-ovn-security-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz kube-ovn-security-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: kube-ovn-security-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log
-          path: kube-ovn-security-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log.tar
+          path: kube-ovn-security-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
@@ -1692,14 +1712,16 @@ jobs:
 
       - name: kubectl ko log
         if: failure()
-        run: make kubectl-ko-log && mv kubectl-ko-log.tar kube-ovn-submariner-conformance-e2e-ko-log.tar
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz kube-ovn-submariner-conformance-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
         uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: kube-ovn-submariner-conformance-e2e-ko-log
-          path: kube-ovn-submariner-conformance-e2e-ko-log.tar
+          path: kube-ovn-submariner-conformance-e2e-ko-log.tar.gz
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
